Figured out a bug in usa_ussr variable, created preliminary plot for question 1

--- a/Write-Up.Rmd
+++ b/Write-Up.Rmd
@@ -43,32 +43,22 @@ countrycode$continent[51] <- "Europe"
 countrycode[nrow(countrycode) + 1,] <- "URS"
 #countrycode[nrow(countrycode) + 1,] <- c("URS", "Europe", "Soviet Union", "Warsaw Pact")
 
-#add/manipulate variables
-countrycode <- countrycode %>%
-  mutate(nato_wp = case_when(country == "Belgium" | country == "Canada" | country == "Denmark" | country == "France" | country == "Iceland" | country == "Italy" | country == "Luxembourg" | country == "Netherlands" | country == "Norway" | country == "Portugal" | country == "United Kingdom" | country == "United States" | country == "Greece" | country == "Turkey" | country == "Germany" | country == "Spain" ~ "NATO",
-                             country == "Russia" | country == "Hungary" | country == "Bulgaria" | country == "Poland" | country == "German Democratic Republic" | country == "Romania" | country == "Czechoslovakia" | country == "URS"~ "Warsaw Pact", #CHANGE THIS to Soviet Union when figured out
-                             TRUE ~ "Non-Aligned or not applicable"),
-         usa_ussr = case_when(noc == "URS" ~ "USSR",
-                              noc == "USA" ~ "USA",
-                              TRUE ~ "Other"))
-
-unique(countrycode$usa_ussr)
-
 #merge olympics and countrycode datasets
 olympics_joined <- left_join(olympics_data, unique(countrycode), by = "noc")
 
 #add/manipulate variables to merged dataset
-olympics_joined_test <- olympics_joined %>%
+olympics_joined <- olympics_joined %>%
   mutate(medal_binary = ifelse(!is.na(medal), 1, 0),
          medal_weighted = case_when(medal == "Gold" ~ 3,
                                     medal == "Silver" ~ 2,
                                     medal == "Bronze" ~ 1,
-                                    TRUE ~ 0))
-  
-  
-olympics_joined_test2 <- olympics_joined_test %>%
-  group_by(games, usa_ussr) %>%
-  summarize(medal_prop = (sum(medal_binary, na.rm = TRUE)))
+                                    TRUE ~ 0),
+         nato_wp = case_when(country == "Belgium" | country == "Canada" | country == "Denmark" | country == "France" | country == "Iceland" | country == "Italy" | country == "Luxembourg" | country == "Netherlands" | country == "Norway" | country == "Portugal" | country == "United Kingdom" | country == "United States" | country == "Greece" | country == "Turkey" | country == "Germany" | country == "Spain" ~ "NATO",
+                             country == "Russia" | country == "Hungary" | country == "Bulgaria" | country == "Poland" | country == "German Democratic Republic" | country == "Romania" | country == "Czechoslovakia" | country == "URS"~ "Warsaw Pact", #CHANGE THIS to Soviet Union when figured out
+                             TRUE ~ "Non-Aligned or not applicable"),
+         usa_ussr = case_when(noc == "URS" | noc == "RUS" ~ "USSR/Russia",
+                              noc == "USA" ~ "USA",
+                              TRUE ~ "Other"))
 
 #why does NA show up above? -- I think it has something to do with USSR/USA variable
 ```
