--- a/Write-Up.Rmd
+++ b/Write-Up.Rmd
@@ -78,7 +78,7 @@ bg_theme <- theme_minimal() +
 
 The Olympics served as an outlet for different (city-)states to compete with one another through athletics rather than warfare both in antiquity and modernity. Given that following World War II, there was a bipolar world order with the United States of America (USA) and the Union of Soviet Socialist Republics (USSR) as the world’s greatest superpowers, the Olympics were an outlet for the two players to compete with one another outside of the many proxy wars they fought. In the following, we want to examine the following questions: 
 
-1. How has the dominance of the Soviet Union (/Russia as its main successor) and the United States changed throughout the cold war and after? 
+1. How has the dominance of the Soviet Union (/Russia as its main successor) and the United States changed throughout the cold war and after?
 2. How do NATO and Warsaw Pact member-states compare in terms of medals won at the Olympics?
 
 In order to answer these questions, we examine the `country` variable (coded based on the `noc` variable) and, relatedly, the `nato_wp` variable which indicates whether a country was a member of NATO, the Warsaw Pact, or non-aligned (also coded based on the `noc` variable). To measure their success in the Olympics, we calculate the proportion of medals won by the USSR/Russia or the USA and all other countries (stored in the `usa_ussr` variable), and examine the total amount of medals won by NATO/Warsaw Pact members. Finally, we also assess the `season` variable in order to differentiate between Summer and Winter Olympics. 
@@ -91,7 +91,7 @@ In order to answer these questions, we examine the `country` variable (coded bas
 Approach (1-2 paragraphs): Describe what types of plots you are going to make to address your question. For each plot, provide a clear explanation as to why this plot (e.g. boxplot, barplot, histogram, etc.) is best for providing the information you are asking about. The two plots should be of different types, and at least one of the two plots needs to use either color mapping or facets.
 
 
-We believe that time-series plots are best-suited to examine changes and trends over periods of time; thus we will construct a time-series plot and line graph to examine how the proportion of medals won by the USA and USSR/Russia have developed over time. On the x-axis, we will plot the `year` variable, and on the y-axis, we will plot the `usa_ussr_medals` variable. Different colors will help us differentiate between medals won by the USA, the USSR/Russia, and other countries. We will facet the plot by the `season` variable to indicate whether medals were won in Summer or Winter Olympics, and add vertical lines to this plot indicating the founding of the Soviet Union (1922), the end of World War II (1945), as well as the end of the cold war as marked by the dissolution of the USSR (1991).
+We believe that time-series plots are best-suited to examine changes and trends over periods of time; thus we will construct a time-series plot and line graph to examine how the proportion of medals won by the USA and USSR/Russia have developed over time. On the x-axis, we will plot the `year` variable, and on the y-axis, we will plot the `usa_ussr_medals` variable. Different colors will help us differentiate between medals won by the USA, the USSR/Russia, and other countries. We will facet the plot by the `season` variable to indicate whether medals were won in Summer or Winter Olympics, and add vertical lines to this plot indicating the end of World War II (1945), as well as the end of the cold war as marked by the dissolution of the USSR (1991).
 
 For the second question, we choose to represent the information relevant to answering the question in a stacked bar chart.
 
@@ -104,14 +104,21 @@ Analysis (2-3 code blocks, 2 figures, text/code comments as needed): In this sec
 q1_df <- olympics_joined %>%
   group_by(year, usa_ussr, season) %>%
   summarize(medal_prop = (sum(medal_binary)/medal_sum)) %>%
-  filter(year >= 1920)
+  filter(year >= 1922)
 
 #create plot mapping USA/USSR/others medals over time
 q1_df %>%
   ggplot(mapping = aes(x = year, y = medal_prop, color = usa_ussr, na.rm = TRUE))+
   geom_line() +
+  geom_vline(xintercept = 1945,
+             linetype = "dashed",
+             alpha = 0.75) +
+  geom_vline(xintercept = 1991,
+             linetype = "dashed",
+             alpha = 0.75) +
   facet_wrap(vars(season)) +
   scale_color_manual(values = c("grey", "blue", "red")) +
+  scale_x_continuous(breaks = seq(1920, 2022, 12)) +
   bg_theme +
   theme(axis.text.x = element_text(angle = 30, hjust = 1)) +
   labs(title = "Olympic Performance of USSR/Russia and USA over Time",
