--- a/Write-Up.Rmd
+++ b/Write-Up.Rmd
@@ -113,14 +113,20 @@ q1_df %>%
   geom_vline(xintercept = 1945,
              linetype = "dashed",
              alpha = 0.75) +
+  geom_text(mapping = aes(x = 1945, y = 0.9, label="End of World War II"),
+            text = element_text(size=11)) +
   geom_vline(xintercept = 1991,
              linetype = "dashed",
              alpha = 0.75) +
+  geom_text(mapping = aes(x = 1991, y = 0.9, label="Dissolution of the USSR"),
+            text = element_text(size=11)) +
   facet_wrap(vars(season)) +
   scale_color_manual(values = c("grey", "blue", "red")) +
   scale_x_continuous(breaks = seq(1920, 2022, 12)) +
+  scale_y_continuous(breaks = seq(0, 1, 0.2)) +
   bg_theme +
-  theme(axis.text.x = element_text(angle = 30, hjust = 1)) +
+  theme(axis.text.x = element_text(angle = 30, hjust = 1),
+        panel.spacing = unit(1.5, "lines")) +
   labs(title = "Olympic Performance of USSR/Russia and USA over Time",
        subtitle = "Proportion of Medals Won by Each Country in Summer and Winter Olympics",
        y = "Proportion of Medals Won",
